Made changes to myDiv Element in script.js file.

--- a/templates/timer.html
+++ b/templates/timer.html
@@ -4,6 +4,9 @@
         <title>JavaScript Test</title>
     </head>
     <body>
-
+    <div id ="myDiv">
+        <h1>My Basic Timer</h1> 
+        <p>This is a paragraph</p>
+        <script src="{{ url_for('static', filename='script.js') }}"></script>
     </body>
 </html>
