--- a/templates/timer.html
+++ b/templates/timer.html
@@ -7,6 +7,8 @@
     <div id ="myDiv">
         <h1>My Basic Timer</h1> 
         <p>This is a paragraph</p>
+        <button id = "myButton">Click Me!</button>
+    </div>
         <script src="{{ url_for('static', filename='script.js') }}"></script>
     </body>
 </html>
