Added a span to timer.html, added funtionality to script.ks that changes the content of span when button is clicked.

--- a/templates/timer.html
+++ b/templates/timer.html
@@ -8,6 +8,7 @@
         <h1>My Basic Timer</h1> 
         <p>This is a paragraph</p>
         <button id = "myButton">Click Me!</button>
+        <span id="mySpan">Intial Span Text</span>
     </div>
         <script src="{{ url_for('static', filename='script.js') }}"></script>
     </body>
